Test Update introduction paragraph in index.html

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
  <h1>Welcome to My Portfolio</h1>
- <p>This is where I showcase my projects and skills.</p>
+ <p>I'm Inès Brakta</p>
 </body>
 </html>
