--- a/index.html
+++ b/index.html
@@ -1,12 +1,49 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
- <meta charset="UTF-8">
- <meta name="viewport" content="width=device-width, initialscale=1.0">
- <title>My Portfolio</title>
+  <meta charset="UTF-8">
+  <title>Mon Portfolio</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
- <h1>Welcome to My Portfolio</h1>
- <p>I'm Inès Brakta</p>
+
+<header>
+  <h1>Ton Nom</h1>
+  <p>Développeur Web / Étudiant / Créateur</p>
+  <a href="#projects" class="btn">Voir mes projets</a>
+</header>
+
+<section id="about">
+  <h2>À propos</h2>
+  <p>
+    Je suis un développeur passionné par le web et la technologie.  
+    J’aime créer des sites modernes, rapides et stylés.
+  </p>
+</section>
+
+<section id="projects">
+  <h2>Mes projets</h2>
+
+  <div class="projects-grid">
+    <div class="card">
+      <h3>Projet 1</h3>
+      <p>Site web en HTML/CSS</p>
+      <a href="https://github.com/toncompte/projet1" target="_blank">Voir</a>
+    </div>
+
+    <div class="card">
+      <h3>Projet 2</h3>
+      <p>App JavaScript</p>
+      <a href="https://github.com/toncompte/projet2" target="_blank">Voir</a>
+    </div>
+  </div>
+</section>
+
+<footer>
+  <p>© 2026 - Ton Nom</p>
+  <a href="https://github.com/toncompte">GitHub</a>
+</footer>
+
+<script src="script.js"></script>
 </body>
 </html>
