--- a/index.html
+++ b/index.html
@@ -8,39 +8,38 @@
 <body>
 
 <header>
-  <h1>Ton Nom</h1>
-  <p>Développeur Web / Étudiant / Créateur</p>
-  <a href="#projects" class="btn">Voir mes projets</a>
+  <h1>Inès Brakta</h1>
+  <p>BTS Cybersecurity Student</p>
+  <a href="#projects" class="btn">my projects</a>
 </header>
 
 <section id="about">
-  <h2>À propos</h2>
+  <h2>About</h2>
   <p>
-    Je suis un développeur passionné par le web et la technologie.  
-    J’aime créer des sites modernes, rapides et stylés.
+    I'm a Student
   </p>
 </section>
 
 <section id="projects">
-  <h2>Mes projets</h2>
+  <h2>My projects</h2>
 
   <div class="projects-grid">
     <div class="card">
-      <h3>Projet 1</h3>
-      <p>Site web en HTML/CSS</p>
-      <a href="https://github.com/toncompte/projet1" target="_blank">Voir</a>
+      <h3>Project 1</h3>
+      <p>Test</p>
+      <a href="https://github.com/toncompte/projet1" target="_blank">See</a>
     </div>
 
     <div class="card">
-      <h3>Projet 2</h3>
-      <p>App JavaScript</p>
-      <a href="https://github.com/toncompte/projet2" target="_blank">Voir</a>
+      <h3>Project 2</h3>
+      <p>App Test</p>
+      <a href="https://github.com/toncompte/projet2" target="_blank">See</a>
     </div>
   </div>
 </section>
 
 <footer>
-  <p>© 2026 - Ton Nom</p>
+  <p>© 2026 - Inès Brakta</p>
   <a href="https://github.com/toncompte">GitHub</a>
 </footer>
 
