Translate content from French to English

--- a/index.html
+++ b/index.html
@@ -10,46 +10,45 @@
 <header class="hero">
   <div class="hero-content">
     <h1>Inès Brakta</h1>
-    <span class="tag">Étudiante en BTS Cybersécurité</span>
+    <span class="tag">BTS Cybersecurity Student</span>
     <p class="subtitle">
-      Passionnée par la sécurité informatique, la programmation et la protection des données.
+      Cybersecurity test test test
     </p>
-    <a href="#projects" class="btn">Découvrir mes projets</a>
+    <a href="#projects" class="btn">Discover my projects</a>
   </div>
 </header>
 
 <section id="about" class="about">
-  <h2>À propos de moi</h2>
+  <h2>About me</h2>
   <div class="about-container">
     <p>
-      Actuellement en BTS Cybersécurité, je m’intéresse aux réseaux, à la sécurité des systèmes 
-      et au développement web. J’aime apprendre, expérimenter et créer des projets qui ont du sens.
+      Currently in my first year of BTS Cybersecurity, I am interested by networks, security of systems... I enjoy learning, gain experience and create new projects.
     </p>
   </div>
 </section>
 
 <section id="projects" class="projects">
-  <h2>Mes projets</h2>
+  <h2>My projects</h2>
 
   <div class="projects-grid">
     <div class="card">
-      <h3>🔐 Projet Cybersécurité</h3>
-      <p>Analyse et sécurisation d’un réseau local.</p>
-      <a href="https://github.com/toncompte/projet1" target="_blank" class="link">Voir le projet</a>
+      <h3>Python Project</h3>
+      <p>Python Game Developpment.</p>
+      <a href="https://github.com/toncompte/projet1" target="_blank" class="link">See project</a>
     </div>
 
     <div class="card">
-      <h3>💻 Application Web</h3>
-      <p>Création d’une application interactive en HTML/CSS/JS.</p>
-      <a href="https://github.com/toncompte/projet2" target="_blank" class="link">Voir le projet</a>
+      <h3>Project</h3>
+      <p>Creation of the project.</p>
+      <a href="https://github.com/toncompte/projet2" target="_blank" class="link">See project</a>
     </div>
   </div>
 </section>
 
 <section id="contact" class="contact">
-  <h2>Me contacter</h2>
-  <p>Tu peux me retrouver sur GitHub ou m’écrire si tu veux échanger !</p>
-  <a href="https://github.com/toncompte" class="btn">Voir mon GitHub</a>
+  <h2>Contact me!</h2>
+  <p>inessbraktaa@gmail.com</p>
+  <a href="https://www.linkedin.com/in/in%C3%A8s-brakta" class="btn">See my LinkedIn!</a>
 </section>
 
 <footer>
