Update subtitle text in index.html

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <h1>Inès Brakta</h1>
     <span class="tag">BTS Cybersecurity Student</span>
     <p class="subtitle">
-      Cybersecurity test test test
+      I am 18 years old!
     </p>
     <a href="#projects" class="btn">Discover my projects</a>
   </div>
