Add placeholder for phone number in contact section

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
 <section id="contact" class="contact">
   <h2>Contact me!</h2>
   <p>inessbraktaa@gmail.com</p>
+  <p>number?</p>
   <a href="https://www.linkedin.com/in/in%C3%A8s-brakta" class="btn">See my LinkedIn!</a>
 </section>
 
