Add skills and cybersecurity labs sections
Added skills and cybersecurity labs sections with links.

--- a/index.html
+++ b/index.html
@@ -27,6 +27,17 @@
   </div>
 </section>
 
+<section id="skills" class="skills">
+  <h2>Skills</h2>
+  <div class="skills-grid">
+    <span>Cybersecurity Basics</span>
+    <span>Networking</span>
+    <span>Python</span>
+    <span>HTML / CSS</span>
+  </div>
+</section>
+
+
 <section id="projects" class="projects">
   <h2>My projects</h2>
 
@@ -44,6 +55,53 @@
     </div>
   </div>
 </section>
+
+<section id="cyber-labs">
+  <h2>Cybersecurity Labs</h2>
+  <p>I practice cybersecurity on TryHackMe.</p>
+  <a href="https://tryhackme.com/p/tonpseudo" class="btn">See my TryHackMe</a>
+</section>
+
+<section id="cyber-labs">
+  <h2>Cybersecurity Labs</h2>
+  <p>I practice cybersecurity on TryHackMe.</p>
+  <a href="https://tryhackme.com/p/inessbraktaa" class="btn">See my TryHackMe</a>
+</section>
+
+<section id="certifications" class="certifications">
+  <h2>Certifications</h2>
+
+  <div class="certif-grid">
+
+    <div class="certif-card">
+      <img src="microsoft-office-specialist-powerpoint-associate-microsoft-365-apps.png" alt="Certiport Certification">
+      <h3>Certification Certiport</h3>
+      <p>Microsoft Office Specialist: PowerPoint Associate (Microsoft 365 Apps)</p>
+      <a href="https://www.credly.com/badges/76fefbd6-ed07-49bb-8aa6-98d974c684b0/linked_in_profile" target="_blank">Verify credential</a>
+    </div>
+
+  <div class="certif-grid">
+
+    <div class="certif-card">
+      <img src="microsoft-office-specialist-word-associate-microsoft-365-apps.png" alt="Certiport Certification">
+      <h3>Certification Certiport</h3>
+      <p>Microsoft Office Specialist: Word Associate (Microsoft 365 Apps)</p>
+      <a href="https://www.credly.com/badges/c1ffa39c-6a9f-4aa5-8228-df2574f93a7f/linked_in_profile" target="_blank">Verify credential</a>
+    </div>
+
+
+  <div class="certif-grid">
+
+    <div class="certif-card">
+      <img src="microsoft-office-specialist-word-expert-microsoft-365-apps.png" alt="Certiport Certification">
+      <h3>Certification Certiport</h3>
+      <p>Microsoft Office Specialist: Word Expert (Microsoft 365 Apps)</p>
+      <a href="https://www.credly.com/badges/0d74c9c5-3e85-490d-b234-6705a2705566/linked_in_profile" target="_blank">Verify credential</a>
+    </div>
+    
+  </div>
+</section>
+
 
 <section id="contact" class="contact">
   <h2>Contact me!</h2>
