--- a/index.html
+++ b/index.html
@@ -68,32 +68,25 @@
   <div class="certif-grid">
 
     <div class="certif-card">
-      <img src="microsoft-office-specialist-powerpoint-associate-microsoft-365-apps.png" alt="Certiport Certification">
-      <h3>Certification Certiport</h3>
-      <p>Microsoft Office Specialist: PowerPoint Associate (Microsoft 365 Apps)</p>
+      <img src="microsoft-office-specialist-powerpoint-associate-microsoft-365-apps.png" alt="PowerPoint Certification">
+      <h3>Microsoft Office Specialist</h3>
+      <p>PowerPoint Associate (Microsoft 365 Apps)</p>
       <a href="https://www.credly.com/badges/76fefbd6-ed07-49bb-8aa6-98d974c684b0/linked_in_profile" target="_blank">Verify credential</a>
     </div>
 
-  <div class="certif-grid">
-
     <div class="certif-card">
-      <img src="microsoft-office-specialist-word-associate-microsoft-365-apps.png" alt="Certiport Certification">
-      <h3>Certification Certiport</h3>
-      <p>Microsoft Office Specialist: Word Associate (Microsoft 365 Apps)</p>
+      <img src="microsoft-office-specialist-word-associate-microsoft-365-apps.png" alt="Word Certification">
+      <h3>Microsoft Office Specialist</h3>
+      <p>Word Associate (Microsoft 365 Apps)</p>
       <a href="https://www.credly.com/badges/c1ffa39c-6a9f-4aa5-8228-df2574f93a7f/linked_in_profile" target="_blank">Verify credential</a>
     </div>
 
-  <div class="certif-grid">
-
     <div class="certif-card">
-      <img src="microsoft-office-specialist-word-expert-microsoft-365-apps.png" alt="Certiport Certification">
-      <h3>Certification Certiport</h3>
-      <p>Microsoft Office Specialist: Word Expert (Microsoft 365 Apps)</p>
-      <a href="https://www.credly.com/badges/0d74c9c5-3e85-490d-b234-6705a2705566/linked_in_profile" target="_blank">Verify credential</a>
-    </div>
-    
-  </div>
-</section>
+      <img src="microsoft-office-specialist-word-expert-microsoft-365-apps.png" alt="Word Expert Certification">
+      <h3>Microsoft Office Specialist</h3>
+      <p>Word Expert (Microsoft 365 Apps)</p>
+      <a href="https://www.credly.com/badges/0d74c9c
+
 
 
 <section id="contact" class="contact">
