--- a/index.html
+++ b/index.html
@@ -68,24 +68,44 @@
   <div class="certif-grid">
 
     <div class="certif-card">
-      <img src="microsoft-office-specialist-powerpoint-associate-microsoft-365-apps.png" alt="PowerPoint Certification">
-      <h3>Microsoft Office Specialist</h3>
-      <p>PowerPoint Associate (Microsoft 365 Apps)</p>
-      <a href="https://www.credly.com/badges/76fefbd6-ed07-49bb-8aa6-98d974c684b0/linked_in_profile" target="_blank">Verify credential</a>
+      <img src="microsoft-office-specialist-powerpoint-associate-microsoft-365-apps.png" 
+           alt="PowerPoint Certification">
+      <div class="certif-content">
+        <h3>Microsoft Office Specialist</h3>
+        <p>PowerPoint Associate (Microsoft 365 Apps)</p>
+        <a href="https://www.credly.com/badges/76fefbd6-ed07-49bb-8aa6-98d974c684b0/linked_in_profile" target="_blank">
+          Verify credential
+        </a>
+      </div>
     </div>
 
     <div class="certif-card">
-      <img src="microsoft-office-specialist-word-associate-microsoft-365-apps.png" alt="Word Certification">
-      <h3>Microsoft Office Specialist</h3>
-      <p>Word Associate (Microsoft 365 Apps)</p>
-      <a href="https://www.credly.com/badges/c1ffa39c-6a9f-4aa5-8228-df2574f93a7f/linked_in_profile" target="_blank">Verify credential</a>
+      <img src="microsoft-office-specialist-word-associate-microsoft-365-apps.png" 
+           alt="Word Certification">
+      <div class="certif-content">
+        <h3>Microsoft Office Specialist</h3>
+        <p>Word Associate (Microsoft 365 Apps)</p>
+        <a href="https://www.credly.com/badges/c1ffa39c-6a9f-4aa5-8228-df2574f93a7f/linked_in_profile" target="_blank">
+          Verify credential
+        </a>
+      </div>
     </div>
 
     <div class="certif-card">
-      <img src="microsoft-office-specialist-word-expert-microsoft-365-apps.png" alt="Word Expert Certification">
-      <h3>Microsoft Office Specialist</h3>
-      <p>Word Expert (Microsoft 365 Apps)</p>
-      <a href="https://www.credly.com/badges/0d74c9c
+      <img src="microsoft-office-specialist-word-expert-microsoft-365-apps.png" 
+           alt="Word Expert Certification">
+      <div class="certif-content">
+        <h3>Microsoft Office Specialist</h3>
+        <p>Word Expert (Microsoft 365 Apps)</p>
+        <a href="https://www.credly.com/badges/0d74c9c5-3e85-490d-b234-6705a2705566/linked_in_profile" target="_blank">
+          Verify credential
+        </a>
+      </div>
+    </div>
+
+  </div>
+</section>
+
 
 
 
