--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
   <meta charset="UTF-8">
-  <title>Portfolio – Inès Brakta</title>
+  <title>Portfolio Inès Brakta</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -10,9 +10,9 @@
 <header class="hero">
   <div class="hero-content">
     <h1>Inès Brakta</h1>
-    <span class="tag">BTS Cybersecurity Student</span>
+    <span class="tag">2026</span>
     <p class="subtitle">
-      I am 18 years old!
+      BTS Cybersecurity Student
     </p>
     <a href="#projects" class="btn">Discover my projects</a>
   </div>
