--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="fr">
+<html lang="en">
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portfolio Inès Brakta</title>
   <link rel="stylesheet" href="style.css">
 </head>
@@ -11,107 +12,90 @@
   <div class="hero-content">
     <h1>Inès Brakta</h1>
     <span class="tag">2026</span>
-    <p class="subtitle">
-      BTS Cybersecurity Student
-    </p>
+    <p class="subtitle">BTS Cybersecurity Student</p>
     <a href="#projects" class="btn">Discover my projects</a>
   </div>
 </header>
 
-<section id="about" class="about">
-  <h2>About me</h2>
-  <div class="about-container">
-    <p>
-      Currently in my first year of BTS Cybersecurity, I am interested by networks, security of systems... I enjoy learning, gain experience and create new projects.
-    </p>
-  </div>
-</section>
-
-<section id="skills" class="skills">
-  <h2>Skills</h2>
-  <div class="skills-grid">
-    <span>Cybersecurity Basics</span>
-    <span>Networking</span>
-    <span>Python</span>
-    <span>HTML / CSS</span>
-  </div>
-</section>
-
-
-<section id="projects" class="projects">
-  <h2>My projects</h2>
-
-  <div class="projects-grid">
-    <div class="card">
-      <h3>Python Project</h3>
-      <p>Python Game Developpment.</p>
-      <a href="https://github.com/toncompte/projet1" target="_blank" class="link">See project</a>
+<main>
+  <!-- About Section -->
+  <section id="about" class="about">
+    <h2>About Me</h2>
+    <div class="about-content">
+      <p>
+        Currently in my first year of BTS Cybersecurity, I am interested in networks and system security. I enjoy learning, gaining experience and developing new projects.
+      </p>
     </div>
+  </section>
 
-    <div class="card">
-      <h3>Project</h3>
-      <p>Creation of the project.</p>
-      <a href="https://github.com/toncompte/projet2" target="_blank" class="link">See project</a>
+  <!-- Skills Section -->
+  <section id="skills" class="skills">
+    <h2>Skills</h2>
+    <div class="skills-grid">
+      <span>Bases in cybersecurity</span>
+      <span>Networks</span>
+      <span>Python</span>
+      <span>HTML / CSS</span>
     </div>
-  </div>
-</section>
+  </section>
 
-<section id="cyber-labs">
-  <h2>Cybersecurity Labs</h2>
-  <p>I practice cybersecurity on TryHackMe.</p>
-  <a href="https://tryhackme.com/p/tonpseudo" class="btn">See my TryHackMe</a>
-</section>
+  <!-- Projects Section -->
+  <section id="projects" class="projects">
+    <h2>My projects</h2>
+    <div class="projects-grid">
+      <article class="project-card">
+        <h3>Python</h3>
+        <p>Creation of a game with Python to developpe my skills.</p>
+        <a href="https://github.com/toncompte/projet1" target="_blank" class="link">See project</a>
+      </article>
 
-<section id="certifications" class="certifications">
-  <h2>Certifications</h2>
-
-  <div class="certif-grid">
-
-    <div class="certif-card">
-      <img src="microsoft-office-specialist-powerpoint-associate-microsoft-365-apps.png" 
-           alt="PowerPoint Certification">
-      <h3>PowerPoint Associate     </h3>
-      <a href="https://www.credly.com/badges/76fefbd6-ed07-49bb-8aa6-98d974c684b0/linked_in_profile" target="_blank">
-        Verify credential
-      </a>
+      <article class="project-card">
+        <h3>Other project</h3>
+        <p>Creation of a personal project to apply my knowledge.</p>
+        <a href="https://github.com/toncompte/projet2" target="_blank" class="link">See project</a>
+      </article>
     </div>
+  </section>
 
-    <div class="certif-card">
-      <img src="microsoft-office-specialist-word-associate-microsoft-365-apps.png" 
-           alt="Word Associate Certification">
-      <h3>Word Associate     </h3>
-      <a href="https://www.credly.com/badges/c1ffa39c-6a9f-4aa5-8228-df2574f93a7f/linked_in_profile" target="_blank">
-        Verify credential
-      </a>
+  <!-- Cyber Labs Section -->
+  <section id="cyber-labs" class="cyber-labs">
+    <h2>Cybersecurity Labs</h2>
+    <p>I practice cybersecurity on TryHackMe to improve my practical skills.</p>
+    <a href="https://tryhackme.com/p/tonpseudo" target="_blank" class="btn">see my TryHackMe profile!</a>
+  </section>
+
+  <!-- Certifications Section -->
+  <section id="certifications" class="certifications">
+    <h2>Certifications</h2>
+    <div class="certifications-grid">
+      <figure class="certif-card">
+        <img src="microsoft-office-specialist-powerpoint-associate-microsoft-365-apps.png" alt="Certification PowerPoint">
+        <figcaption>
+          <h3>PowerPoint Associate</h3>
+          <a href="https://www.credly.com/badges/76fefbd6-ed07-49bb-8aa6-98d974c684b0/linked_in_profile" target="_blank">
+            Verify the certification
+          </a>
+        </figcaption>
+      </figure>
+
+      <figure class="certif-card">
+        <img src="microsoft-office-specialist-word-associate-microsoft-365-apps.png" alt="Certification Word Associate">
+        <figcaption>
+          <h3>Word Associate</h3>
+          <a href="https://www.credly.com/badges/c1ffa39c-6a9f-4aa5-8228-df2574f93a7f/linked_in_profile" target="_blank">
+            Verify the certification
+          </a>
+        </figcaption>
+      </figure>
+
+      <figure class="certif-card">
+        <img src="microsoft-office-specialist-word-expert-microsoft-365-apps.png" alt="Certification Word Expert">
+        <figcaption>
+          <h3>Word Expert</h3>
+          <a href="https://www.credly.com/badges/0d74c9c5-3e85-490d-b234-6705a2705566/linked_in_profile" target="_blank">
+            Verify the certification
+          </a>
+        </figcaption>
+      </figure>
     </div>
-
-    <div class="certif-card">
-      <img src="microsoft-office-specialist-word-expert-microsoft-365-apps.png" 
-           alt="Word Expert Certification">
-      <h3>Word Expert     </h3>
-      <a href="https://www.credly.com/badges/0d74c9c5-3e85-490d-b234-6705a2705566/linked_in_profile" target="_blank">
-        Verify credential
-      </a>
-    </div>
-
-  </div>
-</section>
-
-
-
-
-
-<section id="contact" class="contact">
-  <h2>Contact me!</h2>
-  <p>inessbraktaa@gmail.com</p>
-  <p>number?</p>
-  <a href="https://www.linkedin.com/in/in%C3%A8s-brakta" class="btn">See my LinkedIn!</a>
-</section>
-
-<footer>
-  <p>© 2026 – Inès Brakta</p>
-</footer>
-
-<script src="script.js"></script>
-</body>
-</html>
+  </section
