Update project links and LinkedIn call-to-action

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
       <div class="card">
         <h3>Python Project</h3>
         <p>Python Game Development.</p>
-        <a href="https://github.com/toncompte/projet1" target="_blank" class="link">See project</a>
+        <a href="https://github.com/inessbraktaa-crypto/BluevsRedSimulator" target="_blank" class="link">See project</a>
       </div>
 
       <div class="card">
@@ -97,7 +97,7 @@
     <h2>Contact me!</h2>
     <p>Email: <a href="mailto:inessbraktaa@gmail.com">inessbraktaa@gmail.com</a></p>
     <p>Phone: number?</p>
-    <a href="https://www.linkedin.com/in/in%C3%A8s-brakta" target="_blank" class="btn">See my LinkedIn!</a>
+    <a href="https://www.linkedin.com/in/in%C3%A8s-brakta" target="_blank" class="btn">Add me on LinkedIn!</a>
   </section>
 
   <!-- Footer -->
