Enhance header with glitch effect and description
Updated header to include a glitch effect for the name and added a description line.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
   <!-- Header / Hero Section -->
   <header class="hero">
     <div class="hero-content">
-      <h1>Inès Brakta</h1>
+      <h1>
+  <span class="glitch">Inès Brakta</span>
+</h1>
+<p class="hero-line">
+  Future Cybersecurity Professional · Learning by breaking & securing systems
+</p>
       <span class="tag">2026</span>
       <p class="subtitle">BTS Cybersecurity Student</p>
       <a href="#projects" class="btn">Discover my projects</a>
