--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="cyber-labs" class="cyber-labs">
     <h2>Cybersecurity Labs</h2>
     <p>I practice cybersecurity on TryHackMe.</p>
-    <a href="https://tryhackme.com/p/tonpseudo" target="_blank" class="btn">See my TryHackMe</a>
+    <a href="https://tryhackme.com/p/inessbraktaa" target="_blank" class="btn">See my TryHackMe</a>
   </section>
 
   <!-- Certifications Section -->
