Revise hero section for clarity and style
Updated hero section content and structure.

--- a/index.html
+++ b/index.html
@@ -14,16 +14,18 @@
   <!-- Header / Hero Section -->
   <header class="hero">
     <div class="hero-content">
-      <h1>
-  <span class="glitch">Inès Brakta</span>
-</h1>
-<p class="hero-line">
-  Future Cybersecurity Professional · Learning by breaking & securing systems
-</p>
-      <span class="tag">2026</span>
-      <p class="subtitle">BTS Cybersecurity Student</p>
-      <a href="#projects" class="btn">Discover my projects</a>
-    </div>
+
+  <h1 class="glitch">Inès Brakta</h1>
+
+  <p class="role">BTS Cybersecurity Student</p>
+
+  <p class="hero-line">
+    Learning how systems break — and how to secure them.
+  </p>
+
+  <a href="#projects" class="btn">View my work</a>
+
+</div>
   </header>
 
   <!-- About Section -->
